# ecd

./: .gitignore  Cargo.toml  Makefile  README.md
completions/: _ecd  ecd.bash  ecd.fish
man/: ecd-check.1  ecd-convert.1  ecd-encodings.1  ecd.1
src/: cli.rs  color.rs  completions.rs  convert.rs  detect.rs  encodings.rs  error.rs  lib.rs  main.rs  output.rs  walk.rs
tests/: cli.rs  completions.rs  convert.rs  encodings.rs
tests/fixtures/: ascii.txt  encodings.json  gbk.txt  utf8.txt
xtask/: Cargo.toml
xtask/src/: main.rs
