[package]
name = "ecd"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "Fast CLI to detect text file encodings (UTF-8, GBK, Shift_JIS, and 35+ more)"
readme = "README.md"
license = "MIT"
authors = ["Dereck <dereckleemj@gmail.com>"]
repository = "https://github.com/DereckLee/ecd"
homepage = "https://github.com/DereckLee/ecd"
documentation = "https://docs.rs/ecd"
keywords = ["encoding", "charset", "cli", "detector", "utf-8"]
categories = ["command-line-utilities", "encoding"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "man/*.1"]

[workspace]
members = [".", "xtask"]

[lib]
name = "ecd"
path = "src/lib.rs"

[[bin]]
name = "ecd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
charset-normalizer-rs = "1"
clap = { version = "4", features = ["derive", "env"] }
encoding_rs = "0.8"
globset = "0.4"
ignore = "0.4"
rayon = "1"

[dev-dependencies]
assert_cmd = "2"
encoding = "0.2"
predicates = "3"
serde_json = "1"
tempfile = "3"
